--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,99 +9,108 @@
             type="no.appsonite.gpsping.viewmodel.RegisterFragmentViewModel" />
     </data>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:background="@drawable/form_bg"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:error="@{viewModel.userNameError}">
+                    android:layout_margin="16dp"
+                    android:background="@drawable/form_bg"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-                    <EditText
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/userName"
-                        android:imeOptions="actionNext"
-                        android:singleLine="true"
-                        app:twoWayText="@{viewModel.userName}" />
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.userNameError}">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:error="@{viewModel.emailError}">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/userName"
+                            android:imeOptions="actionNext"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.userName}" />
+                    </android.support.design.widget.TextInputLayout>
 
-                    <EditText
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/email"
-                        android:imeOptions="actionNext"
-                        android:singleLine="true"
-                        app:twoWayText="@{viewModel.email}" />
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.emailError}">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:error="@{viewModel.passwordError}">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/email"
+                            android:imeOptions="actionNext"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.email}" />
+                    </android.support.design.widget.TextInputLayout>
 
-                    <EditText
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/password"
-                        android:imeOptions="actionNext"
-                        android:inputType="textPassword"
-                        android:singleLine="true"
-                        app:twoWayText="@{viewModel.password}" />
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.passwordError}">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:error="@{viewModel.passwordRepeatError}">
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/password"
+                            android:imeOptions="actionNext"
+                            android:inputType="textPassword"
+                            android:singleLine="true"
+                            app:twoWayText="@{viewModel.password}" />
+                    </android.support.design.widget.TextInputLayout>
 
-                    <EditText
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/confirmPassword"
-                        android:inputType="textPassword"
-                        android:singleLine="true"
-                        app:onActionDone="@{viewModel.passwordDone}"
-                        app:twoWayText="@{viewModel.passwordRepeat}" />
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.passwordRepeatError}">
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/confirmPassword"
+                            android:inputType="textPassword"
+                            android:singleLine="true"
+                            app:onActionDone="@{viewModel.passwordDone}"
+                            app:twoWayText="@{viewModel.passwordRepeat}" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+                <TextView
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_marginTop="24dp"
+                    android:onClick="@{viewModel.onRegisterClick}"
+                    android:text="@string/register" />
             </LinearLayout>
+        </ScrollView>
 
-            <TextView
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_marginTop="24dp"
-                android:onClick="@{viewModel.onRegisterClick}"
-                android:text="@string/register" />
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </layout>
