--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
     <style name="AppTheme.widget" />
 
     <style name="AppTheme.widget.FormTitle">
-        <item name="android:textSize">38sp</item>
+        <item name="android:textSize">32sp</item>
         <item name="typeface">Roboto-Light.ttf</item>
         <item name="android:textColor">@color/mainTextColor</item>
     </style>
@@ -31,11 +31,18 @@
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:minWidth">240dp</item>
+        <item name="android:minWidth">210dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
         <item name="android:clickable">true</item>
+    </style>
+
+    <style name="AppTheme.widget.FormDescription">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/mainTextColor</item>
     </style>
 
 
