--- a/app/src/main/res/layout/item_tracker.xml
+++ b/app/src/main/res/layout/item_tracker.xml
@@ -19,22 +19,35 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/trackerItemHeight">
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/bottomWrapper"
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/editTracker"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:gravity="center"
+                android:onClick="@{onClickListener}"
+                android:tag="@{item}"
+                android:text="@string/editTracker"
+                android:textColor="@color/colorAccent" />
+
+            <TextView
                 android:id="@+id/removeTracker"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:background="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:onClick="@{onClickListener}"
                 android:tag="@{item}"
                 android:text="@string/removeTracker"
-                android:textColor="@color/colorAccent" />
-        </FrameLayout>
+                android:textColor="#80ff0000" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
