--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="trackerIconSmall">56dp</dimen>
     <dimen name="trackerItemHeight">86dp</dimen>
+    <dimen name="friendItemHeight">68dp</dimen>
 </resources>
