--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="trackerIconSmall">56dp</dimen>
     <dimen name="trackerItemHeight">86dp</dimen>
     <dimen name="friendItemHeight">68dp</dimen>
+    <dimen name="width0">0dp</dimen>
+    <dimen name="width100">100dp</dimen>
 </resources>
