--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.WhiteControl" parent="AppTheme">
+        <item name="colorAccent">#fff</item>
+        <item name="colorControlNormal">#fff</item>
+    </style>
+
 
     <style name="AppTheme.widget" />
 
