--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,13 +47,13 @@
                     android:visibility="@{viewModel.activeTracker!=null?View.VISIBLE:View.INVISIBLE}" />
 
                 <TextView
+                    android:id="@+id/startButton"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="4dp"
-                    android:gravity="center"
                     android:background="@drawable/circle_button"
-                    android:onClick="@{viewModel.onStartClick}"
+                    android:gravity="center"
                     android:text="@{viewModel.activeTracker != null ? @string/stop : @string/start}"
                     android:textAllCaps="true"
                     android:textColor="#fff"
@@ -61,25 +61,25 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/mapButton"
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="32dp"
-                    android:onClick="@{viewModel.onMapClick}"
                     android:text="@string/mapAndTracking" />
 
                 <TextView
+                    android:id="@+id/historyButton"
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="24dp"
-                    android:onClick="@{viewModel.onHistoryClick}"
                     android:text="@string/history" />
 
                 <TextView
+                    android:id="@+id/settingsButton"
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="24dp"
                     android:layout_marginBottom="28dp"
-                    android:onClick="@{viewModel.onSettingsClick}"
+                    android:layout_marginTop="24dp"
                     android:text="@string/settings" />
             </LinearLayout>
         </ScrollView>
