--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -71,15 +71,15 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/loginButton"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_marginTop="24dp"
-                android:onClick="@{viewModel.onLoginClick}"
                 android:text="@string/login" />
 
             <TextView
+                android:id="@+id/registerButton"
                 style="@style/AppTheme.widget.Button.Gray"
                 android:layout_marginTop="28dp"
-                android:onClick="@{viewModel.onRegisterClick}"
                 android:text="@string/register" />
         </LinearLayout>
     </ScrollView>
