--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -56,7 +56,8 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="3"
-                    android:checkedButton="@+id/satellite"
+                    android:id="@+id/mapType"
+                    android:checkedButton="@+id/standard"
                     android:orientation="horizontal"
                     app:sc_border_width="1dp"
                     app:sc_checked_text_color="?attr/colorPrimary"
@@ -98,6 +99,7 @@
                 </info.hoang8f.android.segmented.SegmentedGroup>
 
                 <TextView
+                    android:id="@+id/takePhoto"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
