--- a/app/src/main/res/menu/menu_map_history.xml
+++ b/app/src/main/res/menu/menu_map_history.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/removeTracks"
+        android:id="@+id/action_calendar"
         android:icon="@drawable/ic_calendar_white"
         android:title="@string/history"
         app:showAsAction="always" />
