--- a/app/src/main/res/layout/fragment_add_tracker.xml
+++ b/app/src/main/res/layout/fragment_add_tracker.xml
@@ -182,7 +182,7 @@
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_marginBottom="24dp"
                     android:layout_marginTop="24dp"
-                    android:onClick="@{viewModel.addTracker}"
+                    android:id="@+id/addTrackerButton"
                     android:text="@{viewModel.buttonText}" />
             </LinearLayout>
 
