--- a/app/src/main/res/layout/fragment_add_tracker.xml
+++ b/app/src/main/res/layout/fragment_add_tracker.xml
@@ -70,6 +70,7 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:enabled="@{!viewModel.editMode}"
                             android:hint="@string/imeiNumber"
                             android:imeOptions="actionNext"
                             android:inputType="phone"
@@ -86,6 +87,7 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:enabled="@{!viewModel.editMode}"
                             android:hint="@string/trackerNumber"
                             android:imeOptions="actionNext"
                             android:inputType="phone"
@@ -179,11 +181,11 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/addTrackerButton"
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_marginBottom="24dp"
                     android:layout_marginTop="24dp"
-                    android:id="@+id/addTrackerButton"
-                    android:text="@{viewModel.buttonText}" />
+                    android:text="@{viewModel.editMode?@string/update:@string/addTrackerButton}" />
             </LinearLayout>
 
 
