--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="-4dp"
-                    android:text='@{viewModel.activeTracker != null ? viewModel.activeTracker.trackerName:"NoName"}'
+                    android:text='@{viewModel.activeTracker != null ? viewModel.activeTracker.trackerName.get():"NoName"}'
                     android:visibility="@{viewModel.activeTracker!=null?View.VISIBLE:View.INVISIBLE}" />
 
                 <TextView
@@ -54,7 +54,7 @@
                     android:layout_marginTop="4dp"
                     android:background="@drawable/circle_button"
                     android:gravity="center"
-                    android:text="@{viewModel.activeTracker != null ? @string/stop : @string/start}"
+                    android:text="@string/start"
                     android:textAllCaps="true"
                     android:textColor="#fff"
                     android:textSize="52sp"
