--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -26,20 +26,17 @@
             android:layout_height="match_parent"
             android:layout_marginTop="?attr/actionBarSize">
 
-            <android.support.v7.widget.CardView
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="16dp">
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/mapHoverBg">
 
                 <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginRight="12dp"
+                    android:layout_gravity="center_vertical"
                     android:entries="@{viewModel.friendList}" />
-            </android.support.v7.widget.CardView>
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,6 +46,7 @@
                 android:orientation="horizontal">
 
                 <info.hoang8f.android.segmented.SegmentedGroup
+                    android:id="@+id/mapType"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="8dp"
@@ -56,7 +54,6 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="3"
-                    android:id="@+id/mapType"
                     android:checkedButton="@+id/standard"
                     android:orientation="horizontal"
                     app:sc_border_width="1dp"
