--- a/app/src/main/res/layout/item_friends_spinner_drop.xml
+++ b/app/src/main/res/layout/item_friends_spinner_drop.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:paddingBottom="8dp"
+    android:paddingBottom="12dp"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
-    android:paddingTop="8dp"
+    android:paddingTop="12dp"
     android:singleLine="true"
     android:textAlignment="inherit"
-    android:textColor="#fff"
+    android:textColor="#000"
     android:textSize="24sp" />
