--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="whiteHover">#ccffffff</color>
     <color name="calendarOutMonth">#d7d7d7</color>
     <color name="colorEvent">#aec2e5</color>
+    <color name="mapHoverBg">#80000000</color>
 
 </resources>
