filter points by user

--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -32,6 +32,7 @@
                 android:background="@color/mapHoverBg">
 
                 <Spinner
+                    android:id="@+id/friendSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
