--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -18,6 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <no.appsonite.gpsping.widget.MapTargetView
+            android:id="@+id/mapTarget"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -42,6 +48,15 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:entries="@{viewModel.friendList}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:text="@{viewModel.distance}"
+                    android:textColor="#fff"
+                    android:textSize="20sp" />
             </FrameLayout>
 
             <FrameLayout
