--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -81,6 +81,17 @@
                 style="@style/AppTheme.widget.Button.Gray"
                 android:layout_marginTop="28dp"
                 android:text="@string/register" />
+
+            <TextView
+                android:id="@+id/forgetPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:clickable="true"
+                android:text="@string/forgetYourPassword"
+                android:textColor="#000"
+                android:textSize="12sp" />
         </LinearLayout>
     </ScrollView>
 
