--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -60,6 +60,7 @@
             </FrameLayout>
 
             <FrameLayout
+                android:id="@+id/mapPointInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -212,7 +213,7 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="3"
-                    android:checkedButton="@+id/standard"
+                    android:checkedButton="@+id/topo"
                     android:orientation="horizontal"
                     app:sc_border_width="1dp"
                     app:sc_checked_text_color="?attr/colorPrimary"
