--- a/app/src/main/res/layout/fragment_display_options.xml
+++ b/app/src/main/res/layout/fragment_display_options.xml
@@ -72,7 +72,8 @@
             <TextView
                 android:id="@+id/saveButton"
                 style="@style/AppTheme.widget.Button.Green"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/button_margin_top"
+
                 android:text="@string/save" />
         </LinearLayout>
 
