--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -34,42 +34,45 @@
                 android:id="@+id/trackers"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
                 android:text="@string/trackers" />
 
             <TextView
                 android:id="@+id/connect"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
                 android:text="@string/connect" />
 
             <TextView
                 android:id="@+id/geofence"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
+
                 android:text="@string/geofence" />
 
             <TextView
                 android:id="@+id/profile"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
+
                 android:text="@string/profile" />
 
             <TextView
                 android:id="@+id/displayOptions"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
+
                 android:text="@string/displayOptions" />
 
             <TextView
                 android:id="@+id/about"
                 style="@style/AppTheme.widget.Button.Green"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
                 android:text="@string/about" />
         </LinearLayout>
 
