--- a/app/src/main/res/layout/fragment_geofence.xml
+++ b/app/src/main/res/layout/fragment_geofence.xml
@@ -72,7 +72,7 @@
         <TextView
             android:id="@+id/startGeoFence"
             style="@style/AppTheme.widget.Button.Green"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/button_margin_top"
             android:textAllCaps="true"
             android:text="@{viewModel.activeTracker.isGeofenceRunning?@string/stop:@string/start}" />
     </LinearLayout>
