--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -72,13 +72,13 @@
             <TextView
                 android:id="@+id/loginButton"
                 style="@style/AppTheme.widget.Button.Green"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/button_margin_top"
                 android:text="@string/login" />
 
             <TextView
                 android:id="@+id/registerButton"
                 style="@style/AppTheme.widget.Button.Gray"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="@dimen/button_margin_top"
                 android:text="@string/register" />
 
             <TextView
