--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -90,7 +90,7 @@
         <TextView
             android:id="@+id/buttonSave"
             style="@style/AppTheme.widget.Button.Green"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/button_margin_top"
             android:text="@string/save" />
     </LinearLayout>
 </layout>
