--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -120,9 +120,9 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/AppTheme.widget.Button.Green"
-                    android:layout_marginTop="24dp"
                     android:id="@+id/registerButton"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_marginTop="@dimen/button_margin_top"
                     android:text="@string/register" />
             </LinearLayout>
         </ScrollView>
