--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -66,7 +66,7 @@
 
                 <TextView
                     style="@style/AppTheme.widget.Button.Green"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="@dimen/button_margin_top"
                     android:id="@+id/restoreButton"
                     android:text="@string/restore" />
             </LinearLayout>
