--- a/app/src/main/res/layout/dialog_fragment_edit_poi.xml
+++ b/app/src/main/res/layout/dialog_fragment_edit_poi.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
+        android:padding="16dp"
         android:background="#fff"
         android:orientation="vertical">
 
