--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -30,12 +30,12 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/trackers"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/trackers" />
+            <!--<TextView-->
+                <!--android:id="@+id/trackers"-->
+                <!--style="@style/AppTheme.widget.Button.Green"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:layout_marginTop="@dimen/button_margin_top"-->
+                <!--android:text="@string/trackers" />-->
 
             <TextView
                 android:id="@+id/connect"
