--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -46,6 +46,7 @@
                     android:id="@+id/friendSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="96dp"
                     android:layout_gravity="center_vertical"
                     android:entries="@{viewModel.friendList}" />
 
